# pass-dice-and-pin

./: Makefile  README.md  dice.bash  pin.bash
rdice/src/: main.rs
rint/: Cargo.toml
rint/src/: main.rs
