[package]
name = "rint"
version = "0.1.0"
authors = ["Mario Marhuenda <marioytambor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"
